--- a/deploy/nginx-stock.conf
+++ b/deploy/nginx-stock.conf
@@ -26,7 +26,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header REMOTE-HOST $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://localhost:8000/api/;
+        proxy_pass http://172.17.206.133:8000/api/;
         
         # CORS headers
         add_header Access-Control-Allow-Origin *;
