--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 Flask==3.0.3
 Flask-CORS==4.0.1
-akshare==1.14.1
+akshare>=1.17.20
 exchange_calendars==4.5.4
 pandas_ta==0.3.14b0
 pymongo
+pandas>=1.5.0,<2.4.0
+numpy>=1.20.0,<2.0.0
+requests>=2.25.0
+fastapi
+uvicorn
+python-jose[cryptography]
+passlib[bcrypt]
+python-multipart
