feat: 统一概念热度评分体系并部署到生产环境
🚀 主要更新:
- 使用4维度评分体系替换单纯涨跌幅判断
- 统一bot.sh hot和数据准备模块的选股逻辑
- 新增概念热度分析工具和详细文档

🔧 技术改进:
- est_prepare_data.py: 集成4维度评分体系选择top_n概念
- hot_concept_analyzer.py: 统一热度计算方法
- concept_heat_explainer.py: 新增详细热度分析工具
- 优化缓存机制，支持热度分数缓存

📊 评分体系:
- 价格变动(40%) + 资金流向(30%) + 交易活跃度(20%) + 技术指标(10%)
- 热度等级: 火热(≥80) 偏热(60-80) 温和(40-60) 偏冷(20-40) 极冷(<20)

📚 文档完善:
- 新增字段分析报告和热度计算指南
- 整理gitignore规则，排除临时文件

✅ 生产部署: 已同步部署到生产环境

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,15 @@ essential-files.tar.gz
 BOT_USER_GUIDE.md
 LOCAL_DEPLOYMENT_UPDATE.md
 PRODUCTION_DEPLOYMENT_SUMMARY.md
+
+# 新增：分析和测试相关临时文件
+concept_heat_explainer_old.py
+concept_heat_explainer_v2.py
+method_comparison.py
+data_check.py
+test_stream.sh
+
+# 新增：部署相关
+deploy_production.sh
+backend-deploy.tar.gz
+frontend-deploy.tar.gz
