feat: 实现完整的股票交易系统功能
主要功能:
- 缓存管理: 添加清理缓存和磁盘数据功能
- 概念股显示: Top N概念股热度排行榜
- 页面优化: 首次加载自动显示已有数据
- 数据联动: 更新数据后自动加载概念股

技术改进:
- 后端API: 新增缓存清理和概念股数据端点
- 前端UI: 固定高度滚动表格,颜色编码热度
- 数据管道: CSV文件生成和API集成
- 用户体验: 静默加载和实时更新机制

部署状态: 已部署到生产环境 stock.uamgo.com

--- a/.gitignore
+++ b/.gitignore
@@ -115,8 +115,12 @@ concept_heat_explainer_v2.py
 method_comparison.py
 data_check.py
 test_stream.sh
+test_cache_clear.py
+test_concept_api.py
+test_frontend_server.py
 
 # 新增：部署相关
 deploy_production.sh
+deploy_cache_feature.sh
 backend-deploy.tar.gz
 frontend-deploy.tar.gz
