feat: 实现三Tab选股结果展示和分策略持久化存储
主要功能：
- 选股结果改为三个Tab页展示：智能选股、增强选股、传统选股
- 重复股票自动高亮：命中2个Tab浅红色，命中3个Tab深红色
- 数据更新后自动执行三种选股策略
- 分策略文件存储：结果分别保存到对应JSON文件
- 页面刷新后自动加载历史结果到各Tab
- 颜色方案优化：红涨绿跌，减少绿色调使用
- 导出功能增强：支持分策略导出

技术改进：
- 后端新增策略结果存储API和文件管理
- 前端Tab切换和重复检测逻辑
- 持久化存储确保数据不丢失
- 用户体验优化：自动化流程和状态提示

文件整理：
- 更新.gitignore：移除不当忽略规则，整理文件分类
- 确保重要文件正确纳入版本控制

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
+# Python 环境和缓存
 /.idea/
-/QR.png
 /__pycache__/
 /venv/
 .venv/
 *.pyc
 *.pyo
+*.egg-info/
+dist/
+build/
+.coverage
+.pytest_cache/
+.mypy_cache/
+.tox/
 
 # 日志文件
 /logs/
@@ -33,7 +40,7 @@ validation_report_*.json
 .env
 .env.local
 
-# 输出文件
+# 下载目录的输出文件
 /Users/kevin/Downloads/selected_stocks*.txt
 /Users/kevin/Downloads/stock_analysis_report*.txt
 /Users/kevin/Downloads/up_up_*.txt
@@ -46,6 +53,7 @@ validation_report_*.json
 *.swp
 *.swo
 *~
+/QR.png
 
 # 操作系统文件
 .DS_Store
@@ -62,15 +70,6 @@ Thumbs.db
 *.sublime-project
 *.sublime-workspace
 
-# Python 相关
-*.egg-info/
-dist/
-build/
-.coverage
-.pytest_cache/
-.mypy_cache/
-.tox/
-
 # 数据库文件
 *.db
 *.sqlite
@@ -81,46 +80,49 @@ build/
 *.tar.gz
 *.rar
 
-# 部署和构建文件
+# 部署临时文件
+backend-deploy.tar.gz
+frontend-deploy.tar.gz
 essential-files.tar.gz
 .requirements.hash
 
-# 报告文件
-*.html
-*.pdf
-
-# 文档目录保护
-/docs/temp/
-/docs/drafts/
-/docs/*.tmp.md
-/docs/deployment/
-/docs/reports/
-
-# 脚本目录保护
-/scripts/testing/
-/scripts/development/
-/scripts/maintenance/
-/scripts/deployment/
-
-# 部署相关文档（临时生成）
-*_DEPLOYMENT_*.md
-*_CLEANUP_*.md
-BOT_USER_GUIDE.md
-LOCAL_DEPLOYMENT_UPDATE.md
-PRODUCTION_DEPLOYMENT_SUMMARY.md
-
-# 新增：分析和测试相关临时文件
-concept_heat_explainer_old.py
-concept_heat_explainer_v2.py
-method_comparison.py
-data_check.py
+# 临时测试文件（在scripts目录中的特定文件）
+/scripts/concept_heat_explainer_old.py
+/scripts/concept_heat_explainer_v2.py
+/scripts/method_comparison.py
+/scripts/data_check.py
+/scripts/test_*.py
 test_stream.sh
 test_cache_clear.py
 test_concept_api.py
 test_frontend_server.py
 
-# 新增：部署相关
+# 临时部署脚本
 deploy_production.sh
 deploy_cache_feature.sh
-backend-deploy.tar.gz
-frontend-deploy.tar.gz
+
+# 临时测试HTML文件
+test_strategies.html
+test_stream.html
+
+# 临时文档文件
+*_DEPLOYMENT_*.md
+*_CLEANUP_*.md
+BOT_USER_GUIDE.md
+LOCAL_DEPLOYMENT_UPDATE.md
+PRODUCTION_DEPLOYMENT_SUMMARY.md
+GITIGNORE_CLEANUP_SUMMARY.md
+/docs/CODE_CLEANUP_COMPLETE.md
+/docs/DEPLOYMENT_CLEANUP_REPORT.md
+/docs/PRODUCTION_DEPLOYMENT_CHECKLIST.md
+
+# 目录保护（防止空目录或临时目录被提交）
+/docs/temp/
+/docs/drafts/
+/docs/*.tmp.md
+/docs/deployment/
+/docs/reports/
+/scripts/testing/
+/scripts/development/
+/scripts/maintenance/
+/scripts/deployment/
